compiler/testdata/errors/unreachable_code2.lua
return nil
return 5
